@@ -20,7 +20,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2008-11-23 06:48:53 $ $Revision: 1.4 $
+\  $Date: 2009-05-20 13:27:22 $ $Revision: 1.5 $
 \
 \ ==============================================================================
 \
@@ -167,11 +167,6 @@ s" MAX-U" environment? drop constant max-ms@   ( -- u = Maximum value of the mil
   THEN
 ;
 
-: ," ," ALIGN ;    CR .( ," instinker -- see dos.fs )
-
-: >,"              ( c-addr1 -- c-addr2 = Move to the next string, stored by ," )
-  count chars + aligned
-;
 
 [DEFINED] floats [IF]
 
