@@ -21,7 +21,7 @@
 \
 \ ==============================================================================
 \ 
-\  $Date: 2008-11-23 06:48:53 $ $Revision: 1.7 $
+\  $Date: 2009-05-20 13:27:22 $ $Revision: 1.8 $
 \
 \ ==============================================================================
 \
@@ -260,11 +260,6 @@ MODULE: inner
   ELSE
     drop
   THEN
-;
-
-
-: >,"              ( c-addr1 -- c-addr2 = Move to the next string, stored by ," )
-  count chars + aligned
 ;
 
 
