@@ -1,4 +1,5 @@
 0.7.0
+! stt: word for stringtable addition changed from ," to +"
 * dom: small bug fixes for processing instruction (2008-11-18)
 * zif: new module: GZip file reader  (2008-10-12)
 * gzi: new module: GZip reader (2008-10-11)
